--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "clsx": "^2.1.1",
     "firebase": "^12.7.0",
     "framer-motion": "^11.0.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
     "react": "^18",
