--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^3.6.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
