optimize docker configuration for contributors

--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,5 +1,12 @@
-venv
 __pycache__
+venv
 .git
 .env
+.pytest_cache
 *.pyc
+*.pyo
+*.pyd
+.DS_Store
+policy_store.json
+evaluations_store.json
+settings_store.json
