--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,24 @@
 version: '3.8'
 
 services:
-  # Metadata & Audit DB
-  postgres:
-    image: postgres:15-alpine
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: policyguard
-    ports:
-      - "5432:5432"
+  # Backend (FastAPI) - Dev Mode
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile.dev
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-
-  # Vector DB for Policy Segments
-  weaviate:
-    image: semitechnologies/weaviate:1.24.1
+      - ./backend:/app
     ports:
-      - "8080:8080"
-      - "50051:50051"
+      - "8000:8000"
     environment:
-      QUERY_DEFAULTS_LIMIT: 25
-      AUTHENTICATION_ANONYMOUS_ACCESS_ENABLED: 'true'
-      PERSISTENCE_DATA_PATH: '/var/lib/weaviate'
-      DEFAULT_VECTORIZER_MODULE: 'none' # We'll use Gemini embeddings manually
-      ENABLE_MODULES: ''
-    volumes:
-      - weaviate_data:/var/lib/weaviate
+      # Application Settings
+      - PYTHONUNBUFFERED=1
+      # Google API Key (Loaded from backend/.env if present, or passed from host)
+      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
+      - GEMINI_MODEL=${GEMINI_MODEL:-gemini-3-pro-preview}
+    # No external DB dependencies for MVP (Using File Storage)
 
-  # Frontend (Next.js) - Dev Mode
+    # Frontend (Next.js) - Dev Mode
   frontend:
     build:
       context: ./frontend
@@ -42,23 +32,3 @@ services:
       - NEXT_PUBLIC_API_URL=http://localhost:8000
     depends_on:
       - backend
-
-  # Backend (FastAPI) - Dev Mode
-  backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile.dev
-    volumes:
-      - ./backend:/app
-    ports:
-      - "8000:8000"
-    environment:
-      - DATABASE_URL=postgresql://user:password@postgres:5432/policyguard
-      - WEAVIATE_URL=http://weaviate:8080
-    depends_on:
-      - postgres
-      - weaviate
-
-volumes:
-  postgres_data:
-  weaviate_data:
