chore: refine app stability, fix model rotation, and implement PDF export

--- a/backend/settings_store.json
+++ b/backend/settings_store.json
@@ -3,52 +3,37 @@
     "privacy": true,
     "safety": true,
     "security": true,
-<<<<<<< HEAD
-    "fairness": false,
+    "fairness": true,
     "compliance": true
   },
   "region": "Global",
   "sensitivity": "Balanced",
-  "riskThreshold": "Warn Medium",
+  "riskThreshold": "Warn All",
   "minConfidence": 80,
   "strictness": 50,
-=======
-    "fairness": true,
-    "compliance": true
-  },
-  "region": "EU",
-  "sensitivity": "Aggressive",
-  "riskThreshold": "Allow Low",
-  "minConfidence": 80,
-  "strictness": 10,
->>>>>>> main
   "guardrailAction": "Suggest",
   "guardrailExplain": true,
   "guardrailCite": false,
   "sources": {
     "prds": true,
-    "architecture": false,
+    "architecture": true,
     "jira": false,
     "api": false,
     "prompts": true
   },
   "notifications": {
     "email": true,
-<<<<<<< HEAD
-    "slack": false,
-=======
     "slack": true,
->>>>>>> main
     "dashboard": true,
     "triggers": {
       "highRisk": true,
-      "conflict": false,
+      "conflict": true,
       "blocked": true
     }
   },
   "auditLevel": "Detailed",
   "auditRetention": "90",
   "aiReasoning": true,
-  "aiConflict": false,
-  "deploymentMode": "Staging"
+  "aiConflict": true,
+  "deploymentMode": "Production"
 }
