feat: Implement robust cascading API fallback system
- Add cascading model + API key fallback: tries each model across all 3 keys
- Include 19 verified Gemini models (3.0, 2.5, 2.0, 1.5 series)
- Remove deprecated thinking_config parameters causing validation errors
- Strategy: Model 1 → Key1,Key2,Key3 → Model 2 → Key1,Key2,Key3 → etc
- Total: 19 models x 3 keys = 57 fallback attempts per request
- Verified all models against Google's official Feb 2026 documentation

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,22 +1,9 @@
-# AI API Keys
-GOOGLE_API_KEY=your_primary_api_key
-# Optional: Multiple keys for quota rotation
-GOOGLE_API_KEYS=key1,key2,key3
+GOOGLE_API_KEYS=YOUR_API_KEY_1,YOUR_API_KEY_2,YOUR_API_KEY_3
 
-# Model Configuration
-# Available: gemini-3-flash-preview, gemini-3-pro-preview, gemini-2.0-flash, gemini-2.0-pro-exp-02-05
-MODEL_FLASH=gemini-3-flash-preview
-MODEL_PRO=gemini-3-pro-preview
-EMBEDDING_MODEL=text-embedding-004
+# Database Configuration
+DATABASE_URL=sqlite:///./policyguard.db
+USE_FIREBASE=false
 
-# Database & Persistence
-# Set to 'true' to use Firebase Firestore, 'false' for local JSON
-USE_FIREBASE=true
-# Path to service account JSON or raw JSON string
-FIREBASE_CREDENTIALS=serviceAccountKey.json
-
-# System Settings
-
-PROJECT_NAME=PolicyGuard AI
-DEBUG=false
-ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+# Model Configuration (Optional - will use cascade)
+MODEL_FLASH=gemini-2.0-flash-exp
+MODEL_PRO=gemini-1.5-pro-latest
